# Agent-Council

./: Forensic_Council_Implementation_Roadmap.md  README.md  docker-compose.yml
backend/: .env.example  README.md
backend/agents/: agent1_image.py  agent3_object.py  agent5_metadata.py  base_agent.py
backend/core/: config.py
backend/infra/: qdrant_client.py
backend/orchestration/: pipeline.py  session_manager.py
backend/scripts/: run_api.py  smoke_test.sh
docs/: Forensic_Council_Architecture.md  Forensic_Council_Completion_Guide.md  Forensic_Council_Implementation_Roadmap.md
forensic_council/: .env  Dockerfile  README.md  create_fixture.py  docker-compose.yml  pyproject.toml
forensic_council/agents/: agent2_audio.py  agent4_video.py  arbiter.py  base_agent.py
forensic_council/api/: main.py  schemas.py
forensic_council/api/routes/: hitl.py  sessions.py
forensic_council/core/: custody_logger.py  react_loop.py  signing.py  working_memory.py
forensic_council/infra/: postgres_client.py
forensic_council/orchestration/: pipeline.py
forensic_council/scripts/: smoke_test.sh
forensic_council/tests/: conftest.py
forensic_council/tests/test_agents/: __init__.py  test_base_agent.py
forensic_council/tests/test_core/: __init__.py  test_react_loop.py
forensic_council/tests/test_infra/: __init__.py
forensic_council/tests/test_integration/: __init__.py  test_e2e.py
forensic_council/tests/test_tools/: __init__.py
forensic_council/tools/: __init__.py  metadata_tools.py  video_tools.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
(+9 files in other folders)
