[project]
name = "forensic_council"
version = "0.1.0"
description = "Multi-Agent Forensic Evidence Analysis System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Forensic Council Team" }
]

dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "redis[asyncio]>=5.0",
    "qdrant-client[async]>=1.7",
    "asyncpg>=0.29",
    "pydantic>=2",
    "pydantic-settings>=2",
    "cryptography>=42",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # Image processing tools
    "Pillow>=10.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "piexif>=1.1",
    "imagehash>=4.3",
    # Metadata tools
    "timezonefinder>=6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "infra", "agents", "tools", "orchestration"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "infra", "agents", "tools", "orchestration", "reports"]
